<resources>
    <string name="app_name">L05-MyModules</string>
    <string name="title">My Modules</string>
    <string name="detailTitle">Module Details</string>
    <string name="module1">C203 Web Application Development</string>
    <string name="module2">C346 Android Programming</string>
    <string name="tx1">Module Code:</string>
    <string name="tx2">Module Name:</string>
    <string name="tx3">Academic Year:</string>
    <string name="tx4">Semester:</string>
    <string name="tx5">Module Credit:</string>
    <string name="tx6">Venue:</string>
    <string name="backBtn">GO BACK</string>
</resources>